--- a/frontend/src/app/admin-dashboard/admin-dashboard.html
+++ b/frontend/src/app/admin-dashboard/admin-dashboard.html
@@ -1,7 +1,8 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="main-toolbar mat-elevation-z4">
+  <mat-icon class="toolbar-icon">admin_panel_settings</mat-icon>
   <span>Admin Dashboard</span>
   <span class="toolbar-spacer"></span>
-  <button mat-icon-button (click)="logout()">
+  <button mat-icon-button (click)="logout()" matTooltip="Logout">
     <mat-icon>logout</mat-icon>
   </button>
 </mat-toolbar>
@@ -24,7 +25,6 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content class="sidenav-content">
-    <!-- Child components will be rendered here -->
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
