--- a/frontend/src/app/admin/assign-form/assign-form.component.html
+++ b/frontend/src/app/admin/assign-form/assign-form.component.html
@@ -1,7 +1,7 @@
 <h2 mat-dialog-title>{{ title }}</h2>
 <mat-dialog-content>
   <form [formGroup]="assignForm" class="assign-form">
-    <mat-form-field appearance="fill">
+    <mat-form-field appearance="outline">
       <mat-label>Select {{ data.assignType === 'studentToGrade' ? 'Grade' : 'Teacher' }}</mat-label>
       <mat-select formControlName="assignmentId">
         <mat-option *ngFor="let item of (items$ | async)" [value]="item._id">
