--- a/frontend/src/app/admin/manage-grades/manage-grades.component.html
+++ b/frontend/src/app/admin/manage-grades/manage-grades.component.html
@@ -1,55 +1,59 @@
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Manage Grades</mat-card-title>
-    <div class="header-actions">
-      <button mat-raised-button color="primary" (click)="openGradeDialog()">
-        <mat-icon>add</mat-icon>
-        Add Grade
-      </button>
-    </div>
-  </mat-card-header>
-  <mat-card-content>
-    <div *ngIf="!isLoading; else loading">
-      <table mat-table [dataSource]="grades" class="mat-elevation-z8">
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Name </th>
-          <td mat-cell *matCellDef="let grade"> {{grade.name}} </td>
-        </ng-container>
-
-        <!-- Teachers Column -->
-        <ng-container matColumnDef="teachers">
-            <th mat-header-cell *matHeaderCellDef> Assigned Teachers </th>
-            <td mat-cell *matCellDef="let grade"> 
-                {{ getTeacherNames(grade.teachers) }}
-            </td>
-        </ng-container>
-
-        <!-- Actions Column -->
-        <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef> Actions </th>
-          <td mat-cell *matCellDef="let grade">
-            <button mat-icon-button color="accent" (click)="openAssignTeacherDialog(grade)" matTooltip="Assign Teacher">
-              <mat-icon>person_add</mat-icon>
-            </button>
-            <button mat-icon-button color="primary" (click)="openGradeDialog(grade)" matTooltip="Edit Grade">
-              <mat-icon>edit</mat-icon>
-            </button>
-            <button mat-icon-button color="warn" (click)="deleteGrade(grade)" matTooltip="Delete Grade">
-              <mat-icon>delete</mat-icon>
-            </button>
-          </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-    </div>
-
-    <ng-template #loading>
-      <div class="spinner-container">
-        <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+<div class="page-container">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Grade Management</mat-card-title>
+      <div class="header-actions">
+        <button mat-raised-button color="primary" (click)="openGradeDialog()">
+          <mat-icon>add</mat-icon>
+          Add Grade
+        </button>
       </div>
-    </ng-template>
-  </mat-card-content>
-</mat-card>
+    </mat-card-header>
+    <mat-card-content>
+      <div *ngIf="!isLoading; else loading">
+        <div class="mat-elevation-z8 table-container">
+          <table mat-table [dataSource]="grades">
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef> Name </th>
+              <td mat-cell *matCellDef="let grade"> {{grade.name}} </td>
+            </ng-container>
+    
+            <!-- Teachers Column -->
+            <ng-container matColumnDef="teachers">
+                <th mat-header-cell *matHeaderCellDef> Assigned Teachers </th>
+                <td mat-cell *matCellDef="let grade"> 
+                    {{ getTeacherNames(grade.teachers) }}
+                </td>
+            </ng-container>
+    
+            <!-- Actions Column -->
+            <ng-container matColumnDef="actions">
+              <th mat-header-cell *matHeaderCellDef> Actions </th>
+              <td mat-cell *matCellDef="let grade">
+                <button mat-icon-button color="accent" (click)="openAssignTeacherDialog(grade)" matTooltip="Assign Teacher">
+                  <mat-icon>person_add</mat-icon>
+                </button>
+                <button mat-icon-button color="primary" (click)="openGradeDialog(grade)" matTooltip="Edit Grade">
+                  <mat-icon>edit</mat-icon>
+                </button>
+                <button mat-icon-button color="warn" (click)="deleteGrade(grade)" matTooltip="Delete Grade">
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+    
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
+        </div>
+      </div>
+  
+      <ng-template #loading>
+        <div class="spinner-container">
+          <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+        </div>
+      </ng-template>
+    </mat-card-content>
+  </mat-card>
+</div>
