--- a/frontend/src/app/admin/manage-users/manage-users.component.html
+++ b/frontend/src/app/admin/manage-users/manage-users.component.html
@@ -1,65 +1,69 @@
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Manage Users</mat-card-title>
-    <div class="header-actions">
-      <button mat-raised-button color="primary" (click)="openUserDialog()">
-        <mat-icon>add</mat-icon>
-        Add User
-      </button>
-    </div>
-  </mat-card-header>
-  <mat-card-content>
-    <div *ngIf="!isLoading; else loading">
-      <table mat-table [dataSource]="users" class="mat-elevation-z8">
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Name </th>
-          <td mat-cell *matCellDef="let user"> {{user.name}} </td>
-        </ng-container>
-
-        <!-- Email Column -->
-        <ng-container matColumnDef="email">
-          <th mat-header-cell *matHeaderCellDef> Email </th>
-          <td mat-cell *matCellDef="let user"> {{user.email}} </td>
-        </ng-container>
-
-        <!-- Role Column -->
-        <ng-container matColumnDef="role">
-          <th mat-header-cell *matHeaderCellDef> Role </th>
-          <td mat-cell *matCellDef="let user"> {{getRoleName(user.role)}} </td>
-        </ng-container>
-
-        <!-- Grade Column -->
-        <ng-container matColumnDef="grade">
-          <th mat-header-cell *matHeaderCellDef> Grade </th>
-          <td mat-cell *matCellDef="let user"> {{getGradeName(user.grade)}} </td>
-        </ng-container>
-
-        <!-- Actions Column -->
-        <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef> Actions </th>
-          <td mat-cell *matCellDef="let user">
-            <button mat-icon-button color="accent" (click)="openAssignGradeDialog(user)" matTooltip="Assign Grade" [disabled]="getRoleName(user.role) !== 'Student'">
-              <mat-icon>school</mat-icon>
-            </button>
-            <button mat-icon-button color="primary" (click)="openUserDialog(user)" matTooltip="Edit User">
-              <mat-icon>edit</mat-icon>
-            </button>
-            <button mat-icon-button color="warn" (click)="deleteUser(user)" matTooltip="Delete User">
-              <mat-icon>delete</mat-icon>
-            </button>
-          </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-    </div>
-
-    <ng-template #loading>
-      <div class="spinner-container">
-        <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+<div class="page-container">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>User Management</mat-card-title>
+      <div class="header-actions">
+        <button mat-raised-button color="primary" (click)="openUserDialog()">
+          <mat-icon>add</mat-icon>
+          Add User
+        </button>
       </div>
-    </ng-template>
-  </mat-card-content>
-</mat-card>
+    </mat-card-header>
+    <mat-card-content>
+      <div *ngIf="!isLoading; else loading">
+        <div class="mat-elevation-z8 table-container">
+          <table mat-table [dataSource]="users">
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef> Name </th>
+              <td mat-cell *matCellDef="let user"> {{user.name}} </td>
+            </ng-container>
+  
+            <!-- Email Column -->
+            <ng-container matColumnDef="email">
+              <th mat-header-cell *matHeaderCellDef> Email </th>
+              <td mat-cell *matCellDef="let user"> {{user.email}} </td>
+            </ng-container>
+  
+            <!-- Role Column -->
+            <ng-container matColumnDef="role">
+              <th mat-header-cell *matHeaderCellDef> Role </th>
+              <td mat-cell *matCellDef="let user"> {{getRoleName(user.role)}} </td>
+            </ng-container>
+  
+            <!-- Grade Column -->
+            <ng-container matColumnDef="grade">
+              <th mat-header-cell *matHeaderCellDef> Grade </th>
+              <td mat-cell *matCellDef="let user"> {{getGradeName(user.grade)}} </td>
+            </ng-container>
+  
+            <!-- Actions Column -->
+            <ng-container matColumnDef="actions">
+              <th mat-header-cell *matHeaderCellDef> Actions </th>
+              <td mat-cell *matCellDef="let user">
+                <button mat-icon-button color="accent" (click)="openAssignGradeDialog(user)" matTooltip="Assign Grade" [disabled]="getRoleName(user.role) !== 'Student'">
+                  <mat-icon>school</mat-icon>
+                </button>
+                <button mat-icon-button color="primary" (click)="openUserDialog(user)" matTooltip="Edit User">
+                  <mat-icon>edit</mat-icon>
+                </button>
+                <button mat-icon-button color="warn" (click)="deleteUser(user)" matTooltip="Delete User">
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+  
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
+        </div>
+      </div>
+  
+      <ng-template #loading>
+        <div class="spinner-container">
+          <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+        </div>
+      </ng-template>
+    </mat-card-content>
+  </mat-card>
+</div>
