--- a/frontend/src/app/admin/manage-users/manage-users.component.scss
+++ b/frontend/src/app/admin/manage-users/manage-users.component.scss
@@ -1,21 +1,16 @@
-table {
-  width: 100%;
-}
-
-.spinner-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-}
-
-mat-card-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
+.table-container {
+  overflow: auto;
 }
 
 .mat-icon-button[disabled] {
-    color: rgba(0,0,0,.26);
+  color: rgba(0,0,0,.26);
+}
+
+.header-actions button {
+  display: flex;
+  align-items: center;
+}
+
+.header-actions mat-icon {
+  margin-right: 8px;
 }
