--- a/frontend/src/app/admin/subject-form/subject-form.component.html
+++ b/frontend/src/app/admin/subject-form/subject-form.component.html
@@ -1,7 +1,7 @@
 <h2 mat-dialog-title>{{ isEditMode ? 'Edit Subject' : 'Add New Subject' }}</h2>
 <mat-dialog-content>
   <form [formGroup]="subjectForm" class="subject-form">
-    <mat-form-field appearance="fill">
+    <mat-form-field appearance="outline">
       <mat-label>Subject Name</mat-label>
       <input matInput formControlName="name" required>
       <mat-error *ngIf="subjectForm.get('name')?.hasError('required')">
@@ -9,7 +9,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field appearance="fill">
+    <mat-form-field appearance="outline">
       <mat-label>Description</mat-label>
       <textarea matInput formControlName="description"></textarea>
     </mat-form-field>
