--- a/frontend/src/app/student-dashboard/student-dashboard.html
+++ b/frontend/src/app/student-dashboard/student-dashboard.html
@@ -1,12 +1,13 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="main-toolbar mat-elevation-z4">
+    <mat-icon class="toolbar-icon">face</mat-icon>
   <span *ngIf="profile$ | async as profile">Welcome, {{ profile.name }}</span>
   <span class="toolbar-spacer"></span>
-  <button mat-icon-button (click)="logout()">
+  <button mat-icon-button (click)="logout()" matTooltip="Logout">
     <mat-icon>logout</mat-icon>
   </button>
 </mat-toolbar>
 
-<div class="content">
+<div class="page-container">
   <mat-card class="profile-card" *ngIf="profile$ | async as profile">
     <mat-card-header>
       <mat-card-title>My Profile</mat-card-title>
@@ -25,39 +26,41 @@
     </mat-card-header>
     <mat-card-content>
       <div *ngIf="!isLoading; else loading">
-        <table mat-table [dataSource]="(marks$ | async) || []" class="mat-elevation-z8">
+        <div class="mat-elevation-z8 table-container">
+            <table mat-table [dataSource]="(marks$ | async) || []">
 
-          <!-- Subject Column -->
-          <ng-container matColumnDef="subject">
-            <th mat-header-cell *matHeaderCellDef> Subject </th>
-            <td mat-cell *matCellDef="let mark"> {{mark.subject.name}} </td>
-          </ng-container>
+            <!-- Subject Column -->
+            <ng-container matColumnDef="subject">
+                <th mat-header-cell *matHeaderCellDef> Subject </th>
+                <td mat-cell *matCellDef="let mark"> {{mark.subject.name}} </td>
+            </ng-container>
 
-          <!-- Marks Column -->
-          <ng-container matColumnDef="marks">
-            <th mat-header-cell *matHeaderCellDef> Marks </th>
-            <td mat-cell *matCellDef="let mark"> {{mark.marks}}% </td>
-          </ng-container>
+            <!-- Marks Column -->
+            <ng-container matColumnDef="marks">
+                <th mat-header-cell *matHeaderCellDef> Marks </th>
+                <td mat-cell *matCellDef="let mark"> {{mark.marks}}% </td>
+            </ng-container>
 
-          <!-- Teacher Column -->
-          <ng-container matColumnDef="teacher">
-            <th mat-header-cell *matHeaderCellDef> Teacher </th>
-            <td mat-cell *matCellDef="let mark"> {{mark.teacher.name}} </td>
-          </ng-container>
-          
-          <!-- Last Updated Column -->
-          <ng-container matColumnDef="updatedAt">
-            <th mat-header-cell *matHeaderCellDef> Last Updated </th>
-            <td mat-cell *matCellDef="let mark"> {{mark.updatedAt | date:'short'}} </td>
-          </ng-container>
+            <!-- Teacher Column -->
+            <ng-container matColumnDef="teacher">
+                <th mat-header-cell *matHeaderCellDef> Teacher </th>
+                <td mat-cell *matCellDef="let mark"> {{mark.teacher.name}} </td>
+            </ng-container>
+            
+            <!-- Last Updated Column -->
+            <ng-container matColumnDef="updatedAt">
+                <th mat-header-cell *matHeaderCellDef> Last Updated </th>
+                <td mat-cell *matCellDef="let mark"> {{mark.updatedAt | date:'short'}} </td>
+            </ng-container>
 
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-          <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No marks assigned yet.</td>
-          </tr>
-        </table>
+            <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="4">No marks assigned yet.</td>
+            </tr>
+            </table>
+        </div>
       </div>
 
       <ng-template #loading>
