--- a/frontend/src/app/teacher-dashboard/teacher-dashboard.html
+++ b/frontend/src/app/teacher-dashboard/teacher-dashboard.html
@@ -1,7 +1,8 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="main-toolbar mat-elevation-z4">
+  <mat-icon class="toolbar-icon">history_edu</mat-icon>
   <span>Teacher Dashboard</span>
   <span class="toolbar-spacer"></span>
-  <button mat-icon-button (click)="logout()">
+  <button mat-icon-button (click)="logout()" matTooltip="Logout">
     <mat-icon>logout</mat-icon>
   </button>
 </mat-toolbar>
