--- a/frontend/src/app/teacher/view-students/view-students.component.html
+++ b/frontend/src/app/teacher/view-students/view-students.component.html
@@ -1,47 +1,51 @@
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>My Students</mat-card-title>
-    <mat-card-subtitle>List of students assigned to your grades</mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content>
-    <div *ngIf="!isLoading; else loading">
-      <table mat-table [dataSource]="students" class="mat-elevation-z8">
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Name </th>
-          <td mat-cell *matCellDef="let student"> {{student.name}} </td>
-        </ng-container>
-
-        <!-- Email Column -->
-        <ng-container matColumnDef="email">
-          <th mat-header-cell *matHeaderCellDef> Email </th>
-          <td mat-cell *matCellDef="let student"> {{student.email}} </td>
-        </ng-container>
-        
-        <!-- Grade Column -->
-        <ng-container matColumnDef="grade">
-          <th mat-header-cell *matHeaderCellDef> Grade </th>
-          <td mat-cell *matCellDef="let student"> {{getGradeName(student.grade)}} </td>
-        </ng-container>
-
-        <!-- Actions Column -->
-        <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef> Actions </th>
-          <td mat-cell *matCellDef="let student">
-            <button mat-icon-button color="primary" (click)="openMarkForm(student)">
-              <mat-icon>note_add</mat-icon>
-            </button>
-          </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-    </div>
-    <ng-template #loading>
-      <div class="spinner-container">
-        <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+<div class="page-container">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>My Students</mat-card-title>
+      <mat-card-subtitle>List of students assigned to your grades</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <div *ngIf="!isLoading; else loading">
+        <div class="mat-elevation-z8 table-container">
+          <table mat-table [dataSource]="students">
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef> Name </th>
+              <td mat-cell *matCellDef="let student"> {{student.name}} </td>
+            </ng-container>
+  
+            <!-- Email Column -->
+            <ng-container matColumnDef="email">
+              <th mat-header-cell *matHeaderCellDef> Email </th>
+              <td mat-cell *matCellDef="let student"> {{student.email}} </td>
+            </ng-container>
+            
+            <!-- Grade Column -->
+            <ng-container matColumnDef="grade">
+              <th mat-header-cell *matHeaderCellDef> Grade </th>
+              <td mat-cell *matCellDef="let student"> {{getGradeName(student.grade)}} </td>
+            </ng-container>
+  
+            <!-- Actions Column -->
+            <ng-container matColumnDef="actions">
+              <th mat-header-cell *matHeaderCellDef> Actions </th>
+              <td mat-cell *matCellDef="let student">
+                <button mat-icon-button color="primary" (click)="openMarkForm(student)" matTooltip="Assign/Update Mark">
+                  <mat-icon>note_add</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+  
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
+        </div>
       </div>
-    </ng-template>
-  </mat-card-content>
-</mat-card>
+      <ng-template #loading>
+        <div class="spinner-container">
+          <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+        </div>
+      </ng-template>
+    </mat-card-content>
+  </mat-card>
+</div>
