--- a/frontend/src/app/teacher/view-students/view-students.component.scss
+++ b/frontend/src/app/teacher/view-students/view-students.component.scss
@@ -1,10 +1,3 @@
-table {
-  width: 100%;
-}
-
-.spinner-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
+.table-container {
+  overflow: auto;
 }
